data/derived/comb/progs/unify/prog4649.ml.out
Characters 141-145:
  let seen' = if (List.mem h seen)=false then h@seen in
                                                ^^^^
Error: This expression has type 'a list list
       but an expression was expected of type 'a list
       The type variable 'a occurs inside 'a list
